@@ -1,3 +1,8 @@
+Tue Jun 28 19:23:01 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* signal.c: Now, USE_TRAP_SIGMASK depend on HAVE_PTHREAD_SIGMASK.
+	  The code have already depended on pthread_sigmask since r27464.
+
 Tue Jun 28 15:09:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/benchmark.rb: merge eregon/benchmark.
